# iasi_level2

./: .#setup.py  .gitignore  README.md  pyproject.toml  set.env  setup.cfg  setup.py
configs/: areas.def  areas.yaml  iasi_level2_config.cfg
ears_iasi_lvl2_format_converter/: __init__.py  constants.py  hdf5_to_netcdf.py  iasi_lvl2.py  utils.py
etc/: iasi_level2_config.cfg.template
iasi_level2/: __init__.py  constants.py  ears_iasi_lvl2_converter.py  ftpget_iasi_l2.py  iasi_lvl2.py  iasi_lvl2.py~  utils.py  version.py
scr/: ears_iasi_lvl2_converter.py  ftpget_iasi_l2.py
tests/: test_iasi_lvl2.py
