[tool.poetry]
    name = "iasi_level2"
    version = "0.0.0" # This is just a placeholder for poetry_dynamic_versioning
    description = "EARS-IASI level-2 format converter"
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering"
    ]
    repository = ""
    authors = [
        "Adam Dybroe <adam.dybroe@smhi.se>",
        "Paulo V. C. Medeiros <paulo.medeiros@smhi.se>"
    ]

[tool.poetry.scripts]
    pytroll_product_filter = "pytroll_product_filter.main:main"

[build-system]
    requires = ["poetry-core >= 1.0.0", "poetry-dynamic-versioning"]
    build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
    enable = true
    style = "pep440"

[tool.poetry.dependencies]
    python = "^3.10"
    docutils = "^0.19"
    h5py = "^3.8.0"
    netCDF4 = "^1.6.3"
    netifaces2 = "^0.0.16"
    numpy = "^1.24.2"
    posttroll = "^1.9.0"
    pyorbital = "^1.7.3"
    pyresample = "^1.26.1"
    pillow = "^9.4.0"
    trollsift = "^0.5.0"
    urlparse4 = "^0.1.3"

[tool.poetry.dev-dependencies]
    black = "^23.1.0"
    isort = "^5.12.0"
    pip = "^23.0"
    poetry-dynamic-versioning = "^0.21.4"

[tool.black]
    line-length = 90

[tool.isort]
    profile = "black"
    line_length = 90

