[tool.poetry]
    name = "ears_iasi_lvl2_format_converter"
    version = "0.0.0" # This is just a placeholder for poetry_dynamic_versioning
    description = "EARS-IASI level-2 format converter"
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering"
    ]
    repository = ""
    authors = ["Adam Dybroe <adam.dybroe@smhi.se>"]

[tool.poetry.scripts]
    ears_iasi_lvl2_format_converter = "iasi_level2.ears_iasi_lvl2_converter:main"

[build-system]
    requires = ["poetry-core >= 1.0.0", "poetry-dynamic-versioning"]
    build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
    enable = true
    style = "pep440"

[tool.poetry.dependencies]
    python = "^3.10"
    docutils = "^0.19"
    h5py = "^3.8.0"
    netCDF4 = "^1.6.3"
    netifaces2 = "^0.0.16"
    numpy = "^1.24.2"
    posttroll = "^1.9.0"
    pyorbital = "^1.7.3"
    pyproj = "~3.4.1"
    pyresample = "^1.26.1"
    pillow = "^9.4.0"
    trollsift = "^0.5.0"

[tool.poetry.group.dev.dependencies]
    pip = "^23.0"
    poetry-dynamic-versioning = "^0.21.4"

[tool.poetry.group.test.dependencies]
    pytest = "^7.2.2"
    pytest-cov = "^3.0.0"

[tool.poetry.group.linting.dependencies]
    black = "^23.1.0"
    isort = "^5.12.0"

[tool.pytest.ini_options]
    testpaths = ["tests"]
    addopts = "-v --cov-report=term-missing --cov-report=term:skip-covered --cov-report=xml:.coverage.xml --cov=./"
    log_cli_level = "INFO"

[tool.black]
    line-length = 90

[tool.isort]
    profile = "black"
    line_length = 90
