[project]
name = "ears_iasi_lvl2_format_converter"
dynamic = ["version"]
description = "EARS-IASI level-2 format converter"
authors = [
    { name = "Adam Dybroe", email = "adam.dybroe@smhi.se" }
]
dependencies = [
    "h5py",
    "netCDF4",
    "shapely",
    "scipy",
    "pykdtree",
    "configobj",
    "cftime",
    "docutils",
    "numpy>=1.21",
    "netifaces",
    "posttroll",
    "pyorbital",
    "pyproj",
    "pyresample",
    "trollsift",
    "pillow",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPLv3" }

classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering"
]

[project.scripts]
ears_iasi_lvl2_hdf5_to_netcdf = "ears_iasi_lvl2_format_converter.hdf5_to_netcdf:main"

[project.urls]
"Documentation" = "https://github.com/adybbroe/iasi_level2/"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ears_iasi_lvl2_format_converter"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ears_iasi_lvl2_format_converter/version.py"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "B", "D", "E", "W", "F", "I", "N", "PT", "S", "TID", "C90", "Q", "T10", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests
"ears_iasi_lvl2_format_converter/version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
